gke/api-gateway/gateway-k8s-east.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway-east
  namespace: development
  annotations:
    consul.hashicorp.com/partition: "k8s-east"
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTPS
    port: 9443
    name: https
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
        - name: consul-server-cert
          namespace: consul
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: consul-reference-grant-east
  namespace: consul
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: development
  to:
  - group: ""
    kind: Secret
    name: consul-server-cert
