gke/api-gateway/frontend-httproute-k8s-east.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route-east
  namespace: development
  annotations:
    consul.hashicorp.com/partition: "k8s-east"
spec:
  parentRefs:
  - name: api-gateway-east
    namespace: development
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /frontend
    backendRefs:
    - kind: Service
      name: frontend
      namespace: development
      port: 9090
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: frontend
      namespace: development
      port: 9090
